# rust-bech32-bitcoin

./: Cargo.toml  README.md
src/: constants.rs  lib.rs
