[package]
name = "viacoin-bech32"
version = "0.9.0"
authors = ["Romano"]
repository = "https://github.com/viacoin/rust-bech32-viacoin"
description = "Encodes and decodes Viacoin Segregated Witness addresses in Bech32"
readme = "README.md"
keywords = ["viacoin", "bitcoin", "base32", "bech32", "encoding"]
categories = ["encoding"]
license = "MIT"

[dependencies]
bech32 = "0.6"
